--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ authors = ["Your Name <you@example.com>"]
 
 [dependencies]
 crossbeam-channel = "0.2"
+bufstream = "0.1"
+tokio = "0.1.11"
+futures = "0.1.25"
+bytes = "0.4.10"
+serde = "1.0.80"
+serde_derive = "1.0.80"
+serde_json = "1.0.32"
