--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "hello_world"
+name = "rover_server"
 version = "0.1.0"
-authors = ["Your Name <you@example.com>"]
+authors = ["Leonti Bielski"]
 
 [dependencies]
 crossbeam-channel = "0.2"
