Start working on serial connection

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Leonti Bielski"]
 crossbeam-channel = "0.2"
 bufstream = "0.1"
 tokio = "0.1.11"
+tokio-io = "*"
+tokio-codec = "*"
+tokio-serial = "3.0"
 futures = "0.1.25"
 bytes = "0.4.10"
 serde = "1.0.80"
