--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Leonti Bielski"]
 
 [dependencies]
-crossbeam-channel = "0.2"
+crossbeam-channel = "0.2" #not needed
 bufstream = "0.1"
 tokio = "0.1.11"
 tokio-io = "*"
