--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 authors = ["Leonti Bielski"]
 
 [dependencies]
-crossbeam-channel = "0.2" #not needed
 bufstream = "0.1"
 tokio = "0.1.11"
 tokio-io = "*"
@@ -15,3 +14,5 @@ bytes = "0.4.10"
 serde = "1.0.80"
 serde_derive = "1.0.80"
 serde_json = "1.0.32"
+i2cdev = "0.4.0"
+sysfs_gpio = "0.5.3"
