--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Leonti Bielski"]
 [dependencies]
 bufstream = "0.1"
 tokio = "0.1.11"
+tokio-core = "*"
 tokio-io = "*"
 tokio-codec = "*"
 tokio-serial = "3.0"
@@ -15,4 +16,7 @@ serde = "1.0.80"
 serde_derive = "1.0.80"
 serde_json = "1.0.32"
 i2cdev = "0.4.0"
-sysfs_gpio = "0.5.3"
+
+[dependencies.sysfs_gpio]
+version = "0.5.3"
+features = ["tokio"]
