--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ bytes = "0.4.10"
 serde = "1.0.80"
 serde_derive = "1.0.80"
 serde_json = "1.0.32"
-i2cdev = "0.4.0"
+i2cdev = "0.3.1"
+i2c-pca9685 = "0.1.8"
 
 [dependencies.sysfs_gpio]
 version = "0.5.3"
