--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_derive = "1.0.80"
 serde_json = "1.0.33"
 i2cdev = "0.3.1"
 i2c-pca9685 = "0.1.8"
+mcp3008 = "1.0.0"
 
 [dependencies.sysfs_gpio]
 version = "0.5.3"
