Build musl image to avoid udev issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ tokio-core = "*"
 tokio-io = "*"
 tokio-codec = "*"
 futures = "0.1.25"
+tokio-serial = "3.1.0"
 bytes = "0.4.10"
 serde = "1.0.80"
 serde_derive = "1.0.80"
@@ -21,7 +22,3 @@ mcp3008 = "1.0.0"
 [dependencies.sysfs_gpio]
 version = "0.5.3"
 features = ["tokio"]
-
-[dependencies.tokio-serial]
-version = "3.1.0"
-default-features = false
