--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -16,7 +16,7 @@ RUN apt-get -q update && apt-get install -yq --no-install-recommends libudev-dev
 FROM base as rust
 
 # Install build tools
-RUN apt-get -q update && apt-get install -yq --no-install-recommends build-essential curl file
+RUN apt-get -q update && apt-get install -yq --no-install-recommends build-essential curl file gcc-8-multilib-arm-linux-gnueabihf
 
 ENV PATH=/root/.cargo/bin:$PATH
 
@@ -33,6 +33,7 @@ RUN ./modify-uname.sh %%RESIN_ARCH%%
 # Install rustup downloading the version specified by the standard rust-toolchain file
 COPY rust-toolchain .
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain `cat rust-toolchain`
+RUN rustup target add armv7-unknown-linux-musleabihf
 
 ################################################################################
 # Dependencies
@@ -53,7 +54,7 @@ COPY Cargo.* ./
 COPY rust-toolchain ./
 
 # Build fake project with real dependencies
-RUN cargo build --release
+RUN cargo build --release --target=armv7-unknown-linux-musleabihf
 
 # Remove the fake app build artifacts
 RUN rm -rf target/release/rover_server* target/release/deps/rover_server-*
@@ -76,7 +77,7 @@ COPY . .
 COPY --from=dependencies /build/app/target target
 
 # Build real app
-RUN cargo build --release
+RUN cargo build --release --target=armv7-unknown-linux-musleabihf
 
 ################################################################################
 # Final image
