--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ serde = "1.0.80"
 serde_derive = "1.0.80"
 serde_json = "1.0.33"
 i2cdev = "0.3.1"
-i2c-pca9685 = "0.1.8"
+pca9685 = "0.1.0"
 mcp3008 = "1.0.0"
 sysfs_gpio = "0.5.3"
 
